<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="0dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp">

            <ImageView
                android:id="@+id/imgCandidato"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/imgCandidato" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="7dp">

                    <TextView
                        android:id="@+id/txtCandidato"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/Nombre_candidato"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgPartido"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:contentDescription="@string/Foto_Partido" />

                        <TextView
                            android:id="@+id/txtPartido"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="3dp"
                            android:paddingRight="3dp"
                            android:text="@string/Nombre_Partido"
                            android:textSize="14sp" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtVotos"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cantidad_votos"
                                android:textSize="14sp" />

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:contentDescription="@string/usuarios"
                                card_view:srcCompat="@android:drawable/ic_menu_myplaces" />

                        </LinearLayout>


                        <TextView
                            android:id="@+id/txtPorcentaje"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/porcentaje"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/imgSiguiente"
                        card_view:srcCompat="@android:drawable/ic_menu_send" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>