<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".acerca"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        android:gravity="top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            app:srcCompat="@drawable/white_logo_color_background" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtAcerca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/acerca"
            android:textAlignment="center"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="141dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="40dp">

        <ImageView
            android:id="@+id/imgCorreoAcerca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/sym_action_email" />

        <TextView
            android:id="@+id/txtCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="141dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtLegal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/legal"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="414dp" />
</LinearLayout>